English text for CineQuizz

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <tr>
             <td>
               <h3><a href="http://www.utc.fr/si28/ProjetsUpload/P2014_si28p007/jeu/index.html">Ciné Quizz</a></h3>
-              <p>Quizz intéractif sur le thème du cinéma. Reconnaissez les films qui se cachent derrière les tableaux en débloquant des indices !</p>
+              <p>Interactive Quizz on cinema. Find movies hidden behind the scene by revealing successive items !</p>
               <p>May 2014 - buddies: Max Daragon & Brice Vallée</p>
             </td>
           </tr>
