--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
       <div class="card-white text-center">
         <ul class="list-inline">
-        <li><a href="#"><i class="fab fa-linkedin"></i>Linkedin</a></li>
-        <li><a href="#"><i class="fab fa-github"></i>Github</a></li>
+        <li><a href="https://fr.linkedin.com/in/jordi-tabit-1429885a"><i class="fab fa-linkedin"></i>Linkedin</a></li>
+        <li><a href="https://github.com/jor-di"><i class="fab fa-github"></i>Github</a></li>
       </ul>
       </div>
       <div class="card-white" id="favorite-movies">
