Modified date for Arrival and centered fav mov title

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
       </div>
       <div class="card-white" id="favorite-movies">
-        <h2>My Favorite movies</h2>
+        <h2 class="text-center">My Favorite movies</h2>
         <table>
           <tbody>
             <tr>
@@ -41,7 +41,7 @@
               <td>
                 <h3>Arrival</h3>
                 <p>A linguist is recruited by the military to communicate with alien lifeforms after twelve mysterious spacecrafts land around the world.</p>
-                <p><em>2011, Denis Villeneuve</em></p>
+                <p><em>2016, Denis Villeneuve</em></p>
               </td>
             </tr>
             <tr>
