--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a href="#summary"><i class="fas fa-user-circle"></i></a></li>
       <li><a href="#favorite-movies"><i class="fas fa-film"></i></a></li>
-      <li><a href="#projects"><i class="fas fa-tasks"></i></a></li>
+      <li><a href="#projects"><i class="fab fa-angrycreative"></i></a></li>
     </ul>
   </div>
   <div id="page-content">
